--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,12 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Install PlatformIO
-        run: pip install -U platformio
+      - name: Set up Python
+        uses: actions/setup-python@v1
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install platformio
 
       - name: Change into directory
         run: cd espota
@@ -47,5 +51,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./pio/build/nodemcu/firmware.bin
+          asset_path: ./.pio/build/nodemcu/firmware.bin
           asset_name: firmware.bin
