other directory access

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,11 +28,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install platformio
 
-      - name: Change into directory
-        run: cd espota
-
       - name: compile
-        run: pio run
+        run: pio run ./espota
 
       - name: Create Release
         id: create_release
@@ -51,5 +48,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./.pio/build/nodemcu/firmware.bin
+          asset_path: ./espota/.pio/build/nodemcu/firmware.bin
           asset_name: firmware.bin
