--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           pip install platformio
 
       - name: compile
-        run: pio run ./espota
+        run: pio run
 
       - name: Create Release
         id: create_release
